@@ -7,6 +7,7 @@ import me.shedaniel.rei.api.client.gui.widgets.Widget;
 import me.shedaniel.rei.api.client.gui.widgets.Widgets;
 import me.shedaniel.rei.api.client.registry.display.DisplayCategory;
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
+import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryStacks;
 import net.astralya.hexalia.HexaliaMod;
 import net.astralya.hexalia.compat.rei.HexaliaREIClientPlugin;
@@ -50,47 +51,49 @@ public final class RitualTableCategory implements DisplayCategory<RitualTableDis
         final int fixedX = 28;
 
         Rectangle startPoint = HexaliaREIClientPlugin.centeredIntoRecipeBase(origin, guiWidth, guiHeight);
-
         widgets.add(Widgets.createTexturedWidget(TEXTURE, startPoint.x, startPoint.y, 0, -8, guiWidth, guiHeight));
 
-        List<me.shedaniel.rei.api.common.entry.EntryIngredient> ingredientEntries = display.getInputEntries();
+        List<EntryIngredient> ingredientEntries = display.getInputEntries();
+
         if (ingredientEntries != null && !ingredientEntries.isEmpty()) {
             widgets.add(Widgets.createSlot(new Point(startPoint.x + fixedX, startPoint.y + fixedY))
                     .entries(ingredientEntries.get(0))
                     .markInput()
                     .disableBackground());
 
-            if (ingredientEntries.size() >= 5) {
+            if (ingredientEntries.size() >= 2) {
                 widgets.add(Widgets.createSlot(new Point(startPoint.x + 4, startPoint.y + fixedY))
                         .entries(ingredientEntries.get(1))
                         .markInput()
                         .disableBackground());
-
+            }
+            if (ingredientEntries.size() >= 3) {
                 widgets.add(Widgets.createSlot(new Point(startPoint.x + 52, startPoint.y + fixedY))
                         .entries(ingredientEntries.get(2))
                         .markInput()
                         .disableBackground());
-
+            }
+            if (ingredientEntries.size() >= 4) {
                 widgets.add(Widgets.createSlot(new Point(startPoint.x + fixedX, startPoint.y + 15))
                         .entries(ingredientEntries.get(3))
                         .markInput()
                         .disableBackground());
-
+            }
+            if (ingredientEntries.size() >= 5) {
                 widgets.add(Widgets.createSlot(new Point(startPoint.x + fixedX, startPoint.y + 63))
                         .entries(ingredientEntries.get(4))
                         .markInput()
                         .disableBackground());
-
                 widgets.add(Widgets.createTooltip(
                         new Rectangle(startPoint.x + 4, startPoint.y + 63, 16, 16),
                         Text.translatable("tooltip.hexalia.hex_focus_gui")));
             }
         }
 
-        List<me.shedaniel.rei.api.common.entry.EntryIngredient> outputs = display.getOutputEntries();
+        List<EntryIngredient> outputs = display.getOutputEntries();
         if (outputs != null && !outputs.isEmpty()) {
             widgets.add(Widgets.createSlot(new Point(startPoint.x + 89, startPoint.y + fixedY))
-                    .entries(outputs.get(0))
+                    .entries(outputs.getFirst())
                     .markOutput()
                     .disableBackground());
         }
